@@ -37,8 +37,8 @@ namespace CIAO_RG_LateBinding_Receiver_Impl
     void start (
       ACE_Reactor *reactor);
 
-    void set_topic_name_reader (void);
-    void set_topic_name_getter (void);
+    void set_topic_name_reader (bool test_non_changeable=false);
+    void set_topic_name_getter (bool test_non_changeable=false);
 
     void start_reading (void);
     void start_getting (void);
